--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,14 @@
       <%= devise_error_messages! %>
 
       <div class="form-group">
+        <%= f.text_field :first_name, class: 'form-control', placeholder: 'First name' %>
+      </div>
+
+      <div class="form-group">
+        <%= f.text_field :last_name, class: 'form-control', placeholder: 'Last name' %>
+      </div>
+
+      <div class="form-group">
         <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
       </div>
 
