Seeds for the user, matches

--- a/app/views/users/student/show.html.erb
+++ b/app/views/users/student/show.html.erb
@@ -17,7 +17,7 @@
       <th>First Name</th>
       <th>Last Name</th>
     </tr>
-    <% @matches.each do |match| %>
+    <% @user_today_match.each do |match| %>
     <tr>
       <td><%= match.day %></td>
       <td><%= match.firts_name %></td>
