--- a/app/views/users/student/show.html.erb
+++ b/app/views/users/student/show.html.erb
@@ -6,7 +6,11 @@
     <table summary="You Match detail view">
     <tr>
       <th>Your match today</th>
-      <td><%= @user.first_name %></td>
+      <td>
+        <% if !@user_today_match.nil? %>
+        <%= @user_today_match.first_name %>
+        <% end %>
+      </td>
     </tr>
     </table>
 
@@ -17,11 +21,9 @@
       <th>First Name</th>
       <th>Last Name</th>
     </tr>
-    <% @user_today_match.each do |match| %>
+    <% @user_match.each do |match| %>
     <tr>
-      <td><%= match.day %></td>
-      <td><%= match.firts_name %></td>
-      <td><%= match.last_name %></td>
+      <td><%= match %></td>
     </tr>
     <% end %>
   </table>
