--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -5,9 +5,8 @@
 <div class="matches new">
   <h2>Create Match</h2>
 
-  <%= form_for @match, :url => matches_path do |f| %>
 
-    <%= render(:partial => 'form', :locals => {:f => f}) %>
+    <%= render 'form' %>
 
 
   <% end %>
