--- a/app/views/users/student/show.html.erb
+++ b/app/views/users/student/show.html.erb
@@ -24,6 +24,8 @@
     <% @user_match.each do |match| %>
     <tr>
       <td><%= match %></td>
+      <!-- <td><%= match[1] %></td>
+      <td><%= match[2] %></td> -->
     </tr>
     <% end %>
   </table>
