--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -9,9 +9,9 @@
 
   <table class="listing" summary="Match list">
     <tr class="header">
-      <th>Date</th>
+      <!-- <th>Date</th>
       <th>Student-1</th>
-      <th>Student-2</th>
+      <th>Student-2</th> -->
     </tr>
     <% @all_matches.each do |match| %>
     <tr>
